--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
- 
+<html>
+ <title>
+  First website
+  <title>
+   
+   <body>
+    hi i m aditya
+    
+    <body>
+     <Style>
+      body{
+       background-color:green;
+      }
+     <html>
