--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <html>
  <title>
   First website
-  <title>
+  </title>
    
    <body>
-    hi i m aditya
+   <h1> hi i m aditya</h1>
     
-    <body>
+    </body>
      <Style>
       body{
        background-color:green;
       }
+      </Style>
      <html>
